--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -36,6 +36,7 @@
     margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
+    background-color:#10B981 ;
 
 
 }
@@ -44,10 +45,11 @@
     padding: 15px;
     border: 2px solid #8097db;
     border-radius: 4px;
+
 }
 
 .c1 {
-
+    text-align: center;
     padding: 20px;
 }
 .content {
