added new interfaces for user

--- a/templates/reclamation/edit.html.twig
+++ b/templates/reclamation/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit Reclamation{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Edit Reclamation</h1>
 
     {{ include('reclamation/_form.html.twig', {'button_label': 'Update'}) }}
