--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -83,15 +83,15 @@
         </div>
         <div class="tableformations">
 
-            <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+            <div class="relative overflow-x-auto  border-2 border-white border-opacity-5 shadow-2xl sm:rounded-lg">
                 <table class="w-full text-sm text-left text-gray-400">
-                    <caption class="p-5 text-lg font-semibold text-left  text-white bg-gray-800">
+                    <caption class="p-5 text-lg font-bold text-left  text-white shadow-xl">
                         Nos Formations:
-                        <p class="mt-1 text-sm font-normal text-gray-400">Parcourez notre liste de formations conçues pour améliorer vos compétences dans le domaine de l'informatique.</p>
+                        <p class="mt-1 text-sm font-normal white">Parcourez notre liste de formations conçues pour améliorer vos compétences dans le domaine de l'informatique.</p>
                     </caption>
 
 
-                    <thead class="text-xs  uppercase bg-gray-700 text-gray-400">
+                    <thead class=" uppercase font-medium bg-white bg-opacity-40 text-blue-600">
 
                     <tr>
                         <th scope="col" class="px-6 py-3">
@@ -119,12 +119,12 @@
                     </thead>
                     <tbody>
                     {% for f in formations %}
-                        <tr class="border-b bg-gray-800 border-gray-700">
-                            <th scope="row" class="px-6 py-4 font-medium  whitespace-nowrap text-white">
+                        <tr class="text-white bg-white bg-opacity-10 shadow-xl  font-medium">
+                            <th scope="row" class="px-6 py-4   whitespace-nowrap">
                                 {{ f.nomFormation }}
                             </th>
                             <td class="px-6 py-4">
-                                {{ f.nomFormation }}
+                                {{ f.idFormateur.nom ~ ' ' ~ f.idFormateur.prenom }}
                             </td>
                             <td class="px-6 py-4">
                                 <div class="flex items-center mt-2.5 mb-5">
@@ -147,7 +147,7 @@
                                 {{ f.prix }} TND
                             </td>
                             <td class="px-6 py-4 text-right">
-                                <a href="#" class="font-medium flex content-center text-blue-500 hover:underline">
+                                <a href="#" class="font-extrabold flex content-center text-blue-900 hover:underline">
                                     <svg aria-hidden="true" class="w-5 h-5 mr-2 -ml-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path></svg>
                                     S'inscrire</a>
                             </td>
