--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -6,12 +6,17 @@
     <link rel="stylesheet" href="{{ asset('formation.css') }}">
     {{ encore_entry_link_tags('app') }}
 {% endblock %}
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script defer src="{{ asset('search.js') }}"></script>
 
+{% endblock %}
 
 
 
 {% block content %}
-    <div class="contenu-formation">
+    <div class="contenu">
         <div>
             <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
                 Développez votre carrière en IT avec
@@ -20,7 +25,7 @@
             <p class="text-lg font-normal text-gray-300 lg:text-xl ">Suivez des formations en informatique sur mesure avec Khadamni : un parcours pédagogique adapté à vos besoins !</p>
         </div>
 
-        <div class="secondhead">
+        <div class="heading">
 
             <h1 class="mb-4 text-3xl font-extrabold leading-none tracking-tight text-white">
                 Formation de
@@ -85,6 +90,36 @@
 
             <div class="relative overflow-x-auto  border-2 border-white border-opacity-5 shadow-2xl sm:rounded-lg">
                 <table class="w-full text-sm text-left text-gray-400">
+                    <tr>
+                            <div class="flex">
+                                <div class="dropdown-btn flex-shrink-0">
+                                    <button id="menu-btn" class=" py-2.5 px-4 text-sm font-medium text-center  bg-blue-700 hover:bg-blue-800  text-white " value="nomFormation" ><span class="Btntxt">Formation</span><svg aria-hidden="true" class="w-4 h-4 ml-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></button>
+                                    <ul class="drop hidden divide-y-2 divide-gray-100 bg-blue-500">
+                                        <li>
+                                            <button  class="dbtns px-4 py-1 border-t-2 border-gray-100 hover:bg-blue-800 text-sm font-medium text-white" value="nomFormateur">Formateur</button>
+                                        </li>
+                                        <li>
+                                            <button class="dbtns px-4 py-1  hover:bg-blue-800 text-sm font-medium text-white" value="prix">Prix</button>
+                                        </li>
+
+                                    </ul>
+
+                                </div>
+
+
+
+
+                                <div class="relative w-full">
+                                    <input type="search" id="search-dropdown" class="block p-2.5 w-full z-20 text-sm  rounded-r-lg  bg-white bg-opacity-30    placeholder-gray-800 text-blue-900" placeholder="Recherchez les formations par nom, formateur ou prix..." required>
+                                    <button  class="absolute top-0 right-0 p-2.5 text-sm font-medium text-white  rounded-r-lg  bg-blue-700 cursor-default">
+                                        <svg aria-hidden="true" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+                                        <span class="sr-only">Search</span>
+                                    </button>
+                                </div>
+                            </div>
+
+
+                    </tr>
                     <caption class="p-5 text-lg font-bold text-left  text-white shadow-xl">
                         Nos Formations:
                         <p class="mt-1 text-sm font-normal white">Parcourez notre liste de formations conçues pour améliorer vos compétences dans le domaine de l'informatique.</p>
@@ -117,17 +152,17 @@
                         </th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="prev-tab">
                     {% for f in formations %}
-                        <tr class="text-white bg-white bg-opacity-10 shadow-xl  font-medium">
-                            <th scope="row" class="px-6 py-4   whitespace-nowrap">
+                        <tr>
+                            <td>
                                 {{ f.nomFormation }}
-                            </th>
-                            <td class="px-6 py-4">
-                                {{ f.idFormateur.nom ~ ' ' ~ f.idFormateur.prenom }}
                             </td>
-                            <td class="px-6 py-4">
-                                <div class="flex items-center mt-2.5 mb-5">
+                            <td>
+                                {{ f.nomFormateur }}
+                            </td>
+                            <td>
+                                <div class="flex items-center justify-center mt-2.5 mb-5">
                                     <svg aria-hidden="true" class="w-5 h-5 text-yellow-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>First star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
                                     <svg aria-hidden="true" class="w-5 h-5 text-yellow-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Second star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
                                     <svg aria-hidden="true" class="w-5 h-5 text-yellow-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Third star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
@@ -137,23 +172,24 @@
                                 </div>
 
                             </td>
-                            <td class="px-6 py-4">
+                            <td>
                                 {{ f.description }}
                             </td>
-                            <td class="px-6 py-4">
+                            <td>
                                 {{ f.duree }} semaines
                             </td>
-                            <td class="px-6 py-4">
+                            <td>
                                 {{ f.prix }} TND
                             </td>
-                            <td class="px-6 py-4 text-right">
-                                <a href="#" class="font-extrabold flex content-center text-blue-900 hover:underline">
+                            <td>
+                                <a href="#" class="font-extrabold flex content-center text-blue-800 hover:underline">
                                     <svg aria-hidden="true" class="w-5 h-5 mr-2 -ml-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path></svg>
                                     S'inscrire</a>
                             </td>
                         </tr>
                     {% endfor %}
                     </tbody>
+                    <tbody id="new-tab"></tbody>
                 </table>
             </div>
 
