--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
 				<div class="container mx-auto flex justify-between">
 
 					<div class="mb-6 md:mb-0">
-						<a href="#" class="flex items-center">
+						<a href="{{ path('app_home') }}" class="flex items-center">
 							<img src="{{  asset('LOGOKHADAMNI.png') }}" class="block  h-20 rounded-full  sm:shrink-0 animate-bounce"
 								 alt="logo" />
 							<span
@@ -47,14 +47,17 @@
 						<li class="hover:scale-125 duration-300 py-1 hover:text-teal-400">
 							<a class="cursor-pointer">Contact</a>
 						</li>
-						{% block userButtons %}
+						{% if not app.user %}
 							<button class="bg-blue-400 text-white font-bold py-2 px-4  border-2 border-blue-500 rounded hover:bg-blue-500 hover-border-blue-600">
-								<p class="font-bold">Se Connecter</p>
+								<a href="{{ path('app_login') }}" class="font-bold">Se Connecter</a>
 							</button>
+						{% else %}
 							<button class="bg-green-500 text-white font-bold py-2 px-4 border-2 border-green-600 rounded hover:bg-green-600 hover-border-green-700">
-								<p class="font-bold">Créer un compte</p>
+								<a href="{{ path('app_logout') }}" class="font-bold">Se Déconnecter</a>
 							</button>
-						{% endblock %}
+						{% endif %}
+
+
 
 					</ul>
 				</div>
