--- a/templates/emploi/_form.html.twig
+++ b/templates/emploi/_form.html.twig
@@ -8,7 +8,9 @@
 	<div>
 		{{ form_label(form.salaire, 'Salaire', {'label_attr': {'class': 'block mb-2 text-sm font-medium text-gray-900 dark:text-white'}}) }}
 		{{ form_widget(form.salaire, {'attr': {'class': 'bg-gray-50 border border-gray-300 text-black text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-300 dark:border-gray-200 dark:placeholder-gray-200 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500'}}) }}
-		{{ form_errors(form.salaire) }}
+		<div class="text-red-500">
+			{{ form_errors(form.salaire) }}
+		</div>
 	</div>
 </div>
 <div class="mt-8">
