--- a/templates/emploi/edit.html.twig
+++ b/templates/emploi/edit.html.twig
@@ -11,7 +11,7 @@
 
 	{{ include('emploi/_form.html.twig', {'button_label': 'Update'}) }}
 
-	<a href="{{ path('app_emploi_index') }}">back to list</a>
+	<a href="{{ path('app_emploi_index') }}" class="block text-gray-900  font-bold py-2 px-4 hover:text-gray-800 bg-blue-300 mt-3">back to list</a>
 
-	{{ include('emploi/_delete_form.html.twig') }}
+
 {% endblock %}
