--- a/templates/emploi/index.html.twig
+++ b/templates/emploi/index.html.twig
@@ -1,116 +1,146 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Emploi index
+
+{% block stylesheets %}
+	<link rel="icon" type="image/x-icon" href="{{ asset('LOGOKHADAMNI.png') }}">
+	<link rel="stylesheet" href="{{ asset('formation.css') }}">
+	{{ encore_entry_link_tags('app') }}
+{% endblock %}
+{% block javascripts %}
+	{{ encore_entry_script_tags('app') }}
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	{# // <script defer src="{{ asset('search.js') }}"></script> #}
+
 {% endblock %}
 
+
 {% block content %}
-	<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white text-center">
-		Liste
-		<span class="text-blue-600 dark:text-blue-500">des Emplois</span>
-	</h1>
-	<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-		<table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-			<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-				<tr>
-					<th scope="col" class="px-6 py-3">
-						IdEmploi
-					</th>
-					<th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							Titre
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-					<th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							Description
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-					<th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							DatePublication
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-					<th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							Salaire
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-					<th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							NiveauExperience
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-					<th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							TypeContrat
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-					<th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							Actions
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
+	<div class="contenu">
+		<div>
+			<h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-5xl">
+				N'hésitez pas à partager vos opportunités professionnelles en publiant vos offres d'emploi sur notre plateforme
+				<span class="text-blue-500 ">Khadamni</span>
+			</h1>
+			<p class="text-lg font-normal text-gray-300 lg:text-xl ">Suivez vos emplois favoris en informatique sur mesure avec Khadamni</p>
+		</div>
 
 
-				</tr>
-			</thead>
-			<tbody>
-				{% for emploi in emplois %}
-					<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-						<th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-							{{ emploi.idEmploi }}
-						</th>
-						<td class="px-6 py-4">
-							{{ emploi.titre }}
-						</td>
-						<td class="px-6 py-4">
-							{{ emploi.description }}
-						</td>
-						<td class="px-6 py-4">
-							{{ emploi.datePublication ? emploi.datePublication|date('Y-m-d') : '' }}
-						</td>
-						<td class="px-6 py-4">
-							{{ emploi.salaire }}
-						</td>
-						<td class="px-6 py-4">
-							{{ emploi.niveauExperience }}
-						</td>
-						<td class="px-6 py-4">
-							{{ emploi.typeContrat }}
-						</td>
+		<div class="heading">
 
-						<td class="px-6 py-4 text-right">
-							<a href="{{ path('app_emploi_edit', {'idEmploi': emploi.idEmploi}) }}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-						</td>
-					{% else %}
+
+			<div class="tableformations">
+
+				<div class="relative overflow-x-auto  border-2 border-white border-opacity-5 shadow-2xl sm:rounded-lg">
+					<table class="w-full text-sm text-left text-gray-400">
 						<tr>
-							<td colspan="8">no records found</td>
+							<div
+								class="flex">
+								{# <div class="dropdown-btn flex-shrink-0">
+																																																																																																																																																																																																																																																																                                                                        <button id="menu-btn" class=" py-2.5 px-4 text-sm font-medium text-center  bg-blue-700 hover:bg-blue-800  text-white " value="nomFormation">							                                                                    </div> #}
+
+
+								<div class="relative w-full">
+									<input type="search" id="search-dropdown" class="block p-2.5 w-full z-20 text-sm  rounded-r-lg  bg-white bg-opacity-30    placeholder-gray-800 text-blue-600" placeholder="Recherchez les formations par nom, formateur ou prix..." required>
+									<button class="absolute top-0 right-0 p-2.5 text-sm font-medium text-white  rounded-r-lg  bg-blue-700 cursor-default">
+										<svg aria-hidden="true" class="w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+										</svg>
+										<span class="sr-only">Search</span>
+									</button>
+								</div>
+							</div>
+
+
 						</tr>
-					{% endfor %}
-				</tr>
-			</tbody>
-		</tbody>
-	</table>
-</div>
-<a href="{{ path('app_emploi_new') }}" class="block text-gray-900  font-bold py-2 px-4 hover:text-gray-800 bg-blue-300 mt-3">Create new</a>{% endblock %}
+
+
+						<thead class=" uppercase font-medium bg-white bg-opacity-40 text-blue-500">
+
+							<tr>
+								<th scope="col" class="px-6 py-3">
+									Emploi ID
+								</th>
+								<th scope="col" class="px-6 py-3">
+									Nom Emploi
+								</th>
+
+								<th scope="col" class="px-6 py-3">
+									Description
+								</th>
+								<th scope="col" class="px-6 py-3">
+									Salaire
+								</th>
+								<th scope="col" class="px-6 py-3">
+									Niveau Experience
+								</th>
+								<th scope="col" class="px-6 py-3">
+									Type Contrat
+								</th>
+								<th scope="col" class="px-6 py-3">
+									Date Publication
+								</th>
+
+								<th scope="col" class="px-6 py-3">
+									<span class="sr-only">Edit</span>
+								</th>
+								<th scope="col" class="px-6 py-3"></th>
+							</tr>
+						</thead>
+						<tbody id="prev-tab">
+							{% for emploi in emplois %}
+								<tr>
+									<td>
+										{{ emploi.idEmploi }}
+									</td>
+									<td>
+										{{ emploi.titre }}
+
+									</td>
+
+									<td>{{ emploi.description }}
+									</td>
+									<td>{{ emploi.salaire }}
+										TND
+									</td>
+									<td>{{ emploi.niveauExperience }}
+									</td>
+									<td>{{ emploi.typeContrat }}
+									</td>
+									<td>
+										{{ emploi.datePublication ? emploi.datePublication|date('Y-m-d') : '' }}
+									</td>
+									<td>
+										<a href="{{ path('app_emploi_edit', {'idEmploi': emploi.idEmploi}) }}" class="">
+											<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2 -ml-1" viewbox="0 0 20 20" fill="currentColor">
+												<path fill-rule="evenodd" d="M14.98 3.53c.292-.292.292-.767 0-1.06l-1.96-1.96c-.292-.292-.767-.292-1.06 0l-1.11 1.11 2.02 2.02 1.11-1.11zm-9.15 9.15l7.778-7.778 2.02 2.02-7.778 7.778H5.53v-2.02zm8.658-.384l-1.414 1.414-2.02-2.02 1.414-1.414c.293-.292.768-.292 1.06 0l.96.96c.292.292.292.767 0 1.06z" clip-rule="evenodd"/>
+											</svg>
+										</a>
+									</td>
+
+
+									<td>
+
+										<form method="post" action="{{ path('app_emploi_delete', {'idEmploi': emploi.idEmploi}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+											<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ emploi.idEmploi) }}">
+											<button class="btn">
+												<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewbox="0 0 24 24">
+													<path d="M0 0h24v24H0V0z" fill="none"/>
+													<path d="M19 7h-3V6c0-1.1-.9-2-2-2H10c-1.1 0-2 .9-2 2v1H5v2h14V7zm-9-1h4v1h-4V6zM4.5 9h15l-1.39 12.63c-.08.69-.67 1.37-1.36 1.37H7.35c-.69 0-1.28-.68-1.36-1.37L4.5 9zm7.5 10c.92 0 1.67.75 1.67 1.67S13.92 22 13 22s-1.67-.75-1.67-1.67.75-1.67 1.67-1.67zm4.92-7l-.71-4H9.79l-.71 4h9.34z"/>
+												</svg>
+											</button>
+										</form>
+									</td>
+								</tr>
+
+							{% endfor %}
+						</tbody>
+						<tbody id="new-tab"></tbody>
+					</table>
+				</div>
+
+			</div>
+			<a href="{{ path('app_emploi_new') }}" class="block text-gray-900  font-bold py-2 px-4 hover:text-gray-800 bg-blue-300 mt-3">Create new</a>
+
+		</div>
+
+	{% endblock %}
