--- a/templates/emploi/new.html.twig
+++ b/templates/emploi/new.html.twig
@@ -12,7 +12,7 @@
 
 	{{ include('emploi/_form.html.twig') }}
 
-	<a href="{{ path('app_emploi_index') }}" class="block text-gray-500 font-bold py-2 px-4 hover:text-gray-800 bg-gray-100">
+	<a href="{{ path('app_emploi_index') }}" class="block text-gray-900  font-bold py-2 px-4 hover:text-gray-800 bg-blue-300 mt-3">
 		back to list
 	</a>
 
