added stripe api checkout and activate account methods

--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -12,6 +12,10 @@
 
 {% block content %}
     <div class="contenu">
+        {% for flashMessage in app.session.flashbag.get('info') %}
+            <div class="alert alert-info bg-green-500 flex flex-col w-full items-center justify-center text-center border border-green-600 text-white  py-4 mb-6 font-medium rounded relative shadow-2xl">
+                {{ flashMessage }}</div>
+        {% endfor %}
         <div>
             <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
                 Développez votre carrière en IT avec
@@ -177,7 +181,7 @@
                                 {{ f.prix }} TND
                             </td>
                             <td>
-                                <a href="#" class="font-extrabold flex content-center text-blue-800 hover:underline">
+                                <a href="{{ path('app_formation_checkout',{ 'id': f.idFormation}) }}" class="font-extrabold flex content-center text-blue-800 hover:underline">
                                     <svg aria-hidden="true" class="w-5 h-5 mr-2 -ml-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path></svg>
                                     S'inscrire</a>
                             </td>
