--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,9 +52,37 @@
 								<a href="{{ path('app_login') }}" class="font-bold">Se Connecter</a>
 							</button>
 						{% else %}
-							<button class="bg-green-500 text-white font-bold py-2 px-4 border-2 border-green-600 rounded hover:bg-green-600 hover-border-green-700">
-								<a href="{{ path('app_logout') }}" class="font-bold">Se Déconnecter</a>
+
+
+							<button id="dropdownAvatarNameButton" data-dropdown-toggle="dropdownAvatarName" class="flex items-center text-sm font-medium text-gray-900 rounded-full hover:text-blue-600 dark:hover:text-blue-500 md:mr-0  dark:text-white" type="button">
+								<span class="sr-only">Open user menu</span>
+								<img class="w-8 h-8 mr-2 rounded-full bg-white border-2" src="{{ asset('profilePicture.png') }}" alt="user photo">
+								<a class="text-teal-400">{{ app.user.prenom ~ ' ' ~ app.user.nom }}</a>
+								<svg class="w-4 h-4 mx-1.5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
 							</button>
+
+							<!-- Dropdown menu -->
+							<div id="dropdownAvatarName" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-55 dark:bg-gray-700 dark:divide-gray-600">
+								<div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
+									<div class="truncate">{{ app.user.email }}</div>
+								</div>
+								<ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownInformdropdownAvatarNameButtonationButton">
+									<li>
+										<a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Profile</a>
+									</li>
+									<li>
+										<a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Paramètres</a>
+									</li>
+									<li>
+										<a href="{{ path('app_mes_formations') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mes Formations</a>
+									</li>
+								</ul>
+								<div class="py-2">
+									<a href="{{ path('app_logout') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Se déconnecter</a>
+								</div>
+							</div>
+
+
 						{% endif %}
 
 
