--- a/templates/evenement/show_front.html.twig
+++ b/templates/evenement/show_front.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Evenement{% endblock %}
 
 {% block content %}
-    <h1>Evenement</h1>
+    <h1>Evènement</h1>
 
     <table class="table">
         <tbody>
@@ -26,6 +26,7 @@
         </tbody>
     </table>
 
+    <a href="{{ path('app_avis_front')}}">Voir les avis</a>
     <a href="{{ path('app_evenement_front') }}">Retour à la liste</a>
 
 {% endblock %}
