--- a/templates/evenement/index_front.html.twig
+++ b/templates/evenement/index_front.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    <!-- <h1>Evenement index</h1> -->
+    <h1>Liste des événements</h1>
 
     <table class="table" >
         <thead>
