--- a/templates/formation/mesformations.html.twig
+++ b/templates/formation/mesformations.html.twig
@@ -32,7 +32,7 @@
         {% else %}
 
             <div class="panel shadow-2xl">
-        <a href="{{ path('app_formation_new') }}" class=" uppercase self-end text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-2 rounded-lg w-auto
+        <a href="{{ path('app_formation_new') }}" class=" uppercase self-end text-sm font-bold tracking-wide bg-blue-600 hover:bg-blue-700 text-gray-100 p-2 rounded-lg w-auto
                       focus:outline-none focus:shadow-outline">
             Ajouter une formation
         </a>
