--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -2,13 +2,13 @@
 
 {% block title %}User index{% endblock %}
 
-{% block body %}
-    <h1>User index</h1>
+{% block content %}
+    <div>
 
-    <table class="table">
-        <thead>
+
+        <table class="table">
+            <thead>
             <tr>
-                <th>IdUser</th>
                 <th>Nom</th>
                 <th>Prenom</th>
                 <th>NumTel</th>
@@ -17,19 +17,14 @@
                 <th>AdresseEntreprise</th>
                 <th>NomEntreprise</th>
                 <th>Email</th>
-                <th>Mdp</th>
                 <th>Cv</th>
-                <th>EtatUser</th>
                 <th>Age</th>
-                <th>Note</th>
-                <th>Rating</th>
                 <th>actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
+            </thead>
+            <tbody>
+
             <tr>
-                <td>{{ user.idUser }}</td>
                 <td>{{ user.nom }}</td>
                 <td>{{ user.prenom }}</td>
                 <td>{{ user.numTel }}</td>
@@ -38,24 +33,20 @@
                 <td>{{ user.adresseEntreprise }}</td>
                 <td>{{ user.nomEntreprise }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.mdp }}</td>
                 <td>{{ user.cv }}</td>
-                <td>{{ user.etatUser }}</td>
                 <td>{{ user.age }}</td>
-                <td>{{ user.note }}</td>
-                <td>{{ user.rating }}</td>
+
                 <td>
                     <a href="{{ path('app_user_show', {'idUser': user.idUser}) }}">show</a>
                     <a href="{{ path('app_user_edit', {'idUser': user.idUser}) }}">edit</a>
                 </td>
             </tr>
-        {% else %}
-            <tr>
-                <td colspan="16">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
-    <a href="{{ path('app_user_new') }}">Create new</a>
+
+            </tbody>
+        </table>
+    </div>
+
+
+
 {% endblock %}
