--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -2,15 +2,11 @@
 
 {% block title %}User{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>User</h1>
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>IdUser</th>
-                <td>{{ user.idUser }}</td>
-            </tr>
             <tr>
                 <th>Nom</th>
                 <td>{{ user.nom }}</td>
@@ -44,18 +40,6 @@
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <th>Mdp</th>
-                <td>{{ user.mdp }}</td>
-            </tr>
-            <tr>
-                <th>Cv</th>
-                <td>{{ user.cv }}</td>
-            </tr>
-            <tr>
-                <th>EtatUser</th>
-                <td>{{ user.etatUser }}</td>
-            </tr>
-            <tr>
                 <th>Age</th>
                 <td>{{ user.age }}</td>
             </tr>
@@ -74,5 +58,5 @@
 
     <a href="{{ path('app_user_edit', {'idUser': user.idUser}) }}">edit</a>
 
-    {{ include('user/_delete_form.html.twig') }}
+
 {% endblock %}
