--- a/templates/reclamation/index.html.twig
+++ b/templates/reclamation/index.html.twig
@@ -46,7 +46,7 @@
 					</th>
                 <th scope="col" class="px-6 py-3">
 						<div class="flex items-center">
-							Email
+							Etat Reclamation
 							<a href="#">
 								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
 							</a>
@@ -68,8 +68,17 @@
                     {{ include('reclamation/_delete_form.html.twig') }}
 					<a href="{{ path('app_reclamation_repondre', {'idReclamation': reclamation.idReclamation}) }}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Répondre</a>
 
+<a href="{{ path('login_success') }}" class="btn btn-primary">Envoyer SMS</a>
 
-                    
+<form method="POST" action="{{ path('send_sms') }}">
+    <div class="form-group">
+        <label for="toPhoneNumber">Enter a phone number:</label>
+        <input type="text" name="toPhoneNumber" id="toPhoneNumber" class="form-control">
+    </div>
+    <button type="submit" class="btn btn-primary">Send SMS</button>
+</form>
+
+          
                 </td>
             </tr>
         {% else %}
