--- a/templates/reclamation/index.html.twig
+++ b/templates/reclamation/index.html.twig
@@ -70,7 +70,7 @@
 
 <a href="{{ path('login_success') }}" class="btn btn-primary">Envoyer SMS</a>
 
-<form method="POST" action="{{ path('send_sms') }}">
+<form method="POST" action="{{ path('app_sms') }}">
     <div class="form-group">
         <label for="toPhoneNumber">Enter a phone number:</label>
         <input type="text" name="toPhoneNumber" id="toPhoneNumber" class="form-control">
