added rating system for formations

--- a/templates/formation/FactureMail.html.twig
+++ b/templates/formation/FactureMail.html.twig
@@ -116,7 +116,7 @@
         <td align="center">
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
-                    <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
+                    <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;background-color: #d7e1e8;">
                         <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;color:#16525e;text-align: center;">Merci pour votre achat!</h1>
                     </td>
                 </tr>
@@ -148,12 +148,12 @@
                                 <td style="text-align: right;">{{ formation.prix }} TND</td>
                             </tr>
                             <tr>
-                                <td colspan="3" style="text-align:right; border-top: 1px solid #ccc;">Tax:</td>
-                                <td style="text-align: right; border-top: 1px solid #ccc;">{{ formation.prix * 0.05 }} TND</td>
+                                <td colspan="3" style="text-align:right; border-top: 1px solid #ccc;font-weight: 700;color: #16525e;">Tax:</td>
+                                <td style="text-align: right; border-top: 1px solid #ccc;background-color: #d7e1e8;">{{ formation.prix * 0.05 }} TND</td>
                             </tr>
                             <tr>
-                                <td colspan="3" style="text-align:right;">Total:</td>
-                                <td style="text-align: right;">{{ formation.prix * 1.05 }} TND</td>
+                                <td colspan="3" style="text-align:right;font-weight: 700;color: #16525e;">Total:</td>
+                                <td style="text-align: right;background-color: #d7e1e8;">{{ formation.prix * 1.05 }} TND</td>
                             </tr>
                         </table>
                     </td>
@@ -172,13 +172,13 @@
                 <!-- start permission -->
                 <tr>
                     <td align="center" bgcolor="#8097db" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #fff;">
-                            <p>N'hésitez pas à nous contacter si vous avez des questions ou des soucis.</p>
-                            <div>
-                                <h3>Contact</h3>
-                                <p>Adresse: 123 Esprit, Tunisie</p>
-                                <p>Téléphone: +216 12345678</p>
-                                <p>Email: khadamni12@gmail.com</p>
-                            </div>
+                        <p>N'hésitez pas à nous contacter si vous avez des questions ou des soucis.</p>
+                        <div>
+                            <h3>Contact</h3>
+                            <p>Adresse: 123 Esprit, Tunisie</p>
+                            <p>Téléphone: +216 12345678</p>
+                            <p>Email: khadamni12@gmail.com</p>
+                        </div>
                     </td>
                 </tr>
                 <!-- end permission -->
