--- a/templates/reclamation/index.html.twig
+++ b/templates/reclamation/index.html.twig
@@ -62,7 +62,9 @@
                 <td class="px-6 py-4">{{ reclamation.dateReclamation ? reclamation.dateReclamation|date('Y-m-d') : '' }}</td>
                 <td class="px-6 py-4">{{ reclamation.description }}</td>
                 <td class="px-6 py-4">{{ reclamation.typeReclamation }}</td>
-                <td class="px-6 py-4">{{ reclamation.email }}</td>
+                <td class="px-6 py-4">{{ reclamation.etat }}</td>
+
+
 
 
                 <td>
