--- a/templates/reclamation/show.html.twig
+++ b/templates/reclamation/show.html.twig
@@ -27,6 +27,11 @@
                 <th>Email</th>
                 <td>{{ reclamation.email }}</td>
             </tr>
+            <tr>
+                <th>nombre vue</th>
+                <td>{{ reclamation.nbr_vue }}</td>
+            </tr>
+
         </tbody>
     </table>
      {{ form_start(form) }}
